# ai-dev-media-engine

./: .env.example  .gitignore  README.md  pyproject.toml
profiles/: chronicle-forge.yaml  overseer.yaml
src/media_engine/: __init__.py  cli.py  config.py  models.py  profiles.py
src/media_engine/extract/: __init__.py  experience_summary_builder.py  launch_asset_builder.py  story_builder.py
src/media_engine/extract/prompts/: experience_summary.md.j2  launch_asset.md.j2
src/media_engine/generate/: __init__.py  generator.py
src/media_engine/generate/prompts/: x_post.md.j2
src/media_engine/normalize/: __init__.py  normalizer.py  redaction.py
src/media_engine/review/: __init__.py  draft_writer.py
src/media_engine/sources/: __init__.py  base.py  git_source.py
tests/: test_git_source.py  test_redaction.py  test_story_builder.py
