[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-dev-media-engine"
version = "0.1.0"
description = "Turn development activity into reviewable social-media drafts. Human approves only."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
media-engine = "media_engine.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/media_engine"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
